welcome.lessons.welcome.array.island.Island.scala.error
island:2: error: ';' expected but '(' found.
	var T:Array[Int](num.length)
                        ^